// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayIcon renders 1`] = `
<svg
  className="lexicon-icon lexicon-icon-cool-icon"
  role="presentation"
>
  <use
    href="/path/to/some/resource.svg#cool-icon"
  />
</svg>
`;

exports[`ClayIcon renders the className when \`illustration\` is true 1`] = `
<svg
  className="custom-icon"
  role="presentation"
>
  <use
    href="/path/to/some/empty_states.svg#success-state"
  />
</svg>
`;

exports[`ClayIcon renders with context spritemap 1`] = `
<svg
  className="lexicon-icon lexicon-icon-cool-icon"
  role="presentation"
>
  <use
    href="foo/bar.svg#cool-icon"
  />
</svg>
`;

exports[`ClayIcon renders without the lexicon-icon classes when \`illustration\` is true 1`] = `
<svg
  role="presentation"
>
  <use
    href="/path/to/some/empty_states.svg#success-state"
  />
</svg>
`;
